--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
     <link rel="stylesheet" href="styles/reset.css">
 
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/presentation.css">
-    <link rel="stylesheet" href="styles/features.css">
-    <link rel="stylesheet" href="styles/services.css">
-    <link rel="stylesheet" href="styles/gym-enviroment.css">
-    <link rel="stylesheet" href="styles/photos.css">
-    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="style/global.css">
+    <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/presentation.css">
+    <link rel="stylesheet" href="style/features.css">
+    <link rel="stylesheet" href="style/services.css">
+    <link rel="stylesheet" href="style/gym-enviroment.css">
+    <link rel="stylesheet" href="style/photos.css">
+    <link rel="stylesheet" href="style/footer.css">
 
 
     <title>Fitness Pro</title>
