--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style/global.css">
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/presentation.css">
-    <link rel="stylesheet" href="style/features.css">
+    <link rel="stylesheet" href="style/style/features.css">
     <link rel="stylesheet" href="style/services.css">
     <link rel="stylesheet" href="style/gym-enviroment.css">
     <link rel="stylesheet" href="style/photos.css">
