--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
     <link rel="stylesheet" href="styles/reset.css">
 
-    <link rel="stylesheet" href="style/global.css">
-    <link rel="stylesheet" href="style/header.css">
-    <link rel="stylesheet" href="style/presentation.css">
+    <link rel="stylesheet" href="style/style/global.css">
+    <link rel="stylesheet" href="style/style/header.css">
+    <link rel="stylesheet" href="style/style/presentation.css">
     <link rel="stylesheet" href="style/style/features.css">
-    <link rel="stylesheet" href="style/services.css">
-    <link rel="stylesheet" href="style/gym-enviroment.css">
-    <link rel="stylesheet" href="style/photos.css">
-    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="style/style/services.css">
+    <link rel="stylesheet" href="style/style/gym-enviroment.css">
+    <link rel="stylesheet" href="style/style/photos.css">
+    <link rel="stylesheet" href="style/style/footer.css">
 
 
     <title>Fitness Pro</title>
