--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="style/style/presentation.css">
     <link rel="stylesheet" href="style/style/features.css">
     <link rel="stylesheet" href="style/style/services.css">
-    <link rel="stylesheet" href="style/style/gym-enviroment.css">
+    <link rel="stylesheet" href="style/gym-enviroment.css">
     <link rel="stylesheet" href="style/style/photos.css">
     <link rel="stylesheet" href="style/style/footer.css">
 
